# Fuel_Logger-Rest_API

./: .eslintrc.json  .gitignore  .npmrc  .prettierignore  .prettierrc  .prettierrc.js  .prettierrc.mjs  .spaceignore  .unibeautifyrc.json  Cargo.toml  Spacefile  database.db  diesel.toml  fuel_logger.code-workspace  next.config.js  nx.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json
.changeset/: angry-pumpkins-laugh.md  config.json  lovely-houses-remain.md  mean-starfishes-notice.md  rude-cherries-heal.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: changeset_versionupdate.yaml  detaPush.yml  detaRelease.yml
.husky/: pre-commit
Endpoints/: Cargo.toml
Endpoints/src/: main.rs
Endpoints/src/controller/: entries.rs  logs.rs  mod.rs
Endpoints/src/storage/: mod.rs
Endpoints/src/types/: fuel_structs.rs  mod.rs
TelegramBot/: .changeset  Cargo.toml  package.json
TelegramBot/.changeset/: config.json  dirty-coins-brush.md
TelegramBot/migrations/00000000000000_diesel_initial_setup/: up.sql
TelegramBot/migrations/2024-04-28-200444_create_fuel_logs/: down.sql  up.sql
TelegramBot/migrations/2024-04-28-200541_create_fuel_entries/: down.sql  up.sql
TelegramBot/src/: main.rs
TelegramBot/src/database/: database.rs  models.rs  schema.rs
TelegramBot/src/utils/: fuel_log.rs  mod.rs  telegram.rs
WebApp/: .prettierrc.mjs  CHANGELOG.md  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
WebApp/.changeset/: rude-bats-flow.md
WebApp/.husky/: commit-msg
apps/web/: .eslintrc.json  .prettierrc.mjs  package.json  project.json  tailwind.config.ts  tsconfig.json
docs/: FuelDBTemplate.json
libs/DBUtils/: .eslintignore  .eslintrc  CHANGELOG.md  package.json  project.json  tsconfig.json
migrations/2024-09-13-160741_initialSetup/: down.sql  up.sql
restApi/: package.json  pnpm-lock.yaml  swagger.mjs  tsconfig.json
restApi/docs/: swagger-output.json
restApi/src/: index.ts  swagger.mjs
restApi/tools/: in.csv  in.txt  outCsv.json
src/: App.tsx  index.ts  main.rs  schema.rs
src/app/: layout.tsx  not-found.tsx  page.tsx  providers.tsx
tools/: csvParser.mjs  out.json  txtParser.mjs  uploader.mjs
(+102 files in other folders)
