[package]
name = "fuel-logger-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_okapi = { version = "0.8.0", features = ["swagger"] }
schemars = { version = "0.8.21"}
num-traits = "0.2.19"
dotenvy = "0.15.7"
lovely_env_logger = "0.6.1"
log = "0.4.22"
serde = "1.0.210"
diesel = { version = "2.2.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
