[package]
name = "endpoints"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
rocket_okapi = { version = "0.8.0", features = ["swagger"] }
serde = "1.0.202"
chrono = { version = "0.4.23", features = ["serde"], default-features = false }
schemars = { version = "0.8.20", features = ["chrono"] }
