[package]
name = "fuel_logger-telegram_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2.1", features = ["postgres", "time"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
frankenstein = "0.31.0"
log = "0.4.21"
lovely_env_logger = "0.6.1"
time = { version = "0.3.36", features = ["macros", "parsing", "formatting"] }
